// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Snapshots Custom class button matches Snapshot 1`] = `
<button
  className="btn test"
>
  Test Standard Button
</button>
`;

exports[`Button Component Snapshots Danger button style matches Snapshot 1`] = `
<button
  className="btn danger"
>
  Test Danger Button
</button>
`;

exports[`Button Component Snapshots Standard button style matches Snapshot 1`] = `
<button
  className="btn"
>
  Test Standard Button
</button>
`;
